--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-persist-client": "^5.59.15",
     "axios": "^1.7.7",
+    "lucide-react": "^0.460.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-gesture-handler": "^2.20.0",
